--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           who-to-greet: Adesh
       - name: Log greeting time
-        run: echo ""${{ steps.greet.outputs.time}}    
+        run: echo "${{ steps.greet.outputs.time }}"
