--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,11 @@ jobs:
         run:
           pwd
           ls
+      - name: Checkout
+        uses: actions/checkout@v1 
+        run:
+          pwd
+          ls    
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
