--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,10 @@
 name: Actions Workflow
 
 on: 
-  push:
+  #push:
+  schedule:
+    - cron: "0/5 * * * *"
+    - cron: "0/10 * * * *"
   pull_request:
     types: [closed, assigned,opened, reopened]
 
