--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,9 +2,9 @@ name: Actions Workflow
 
 on: 
   #push:
-  schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/10 * * * *"
+  #schedule:
+   # - cron: "0/5 * * * *"
+   # - cron: "0/10 * * * *"
   pull_request:
     types: [closed, assigned,opened, reopened]
 
