--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -15,6 +15,6 @@ jobs:
           - "27017:27017"    
     steps:
       - name: Post a user
-        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"adesh\",\"address:\": \"swindon\"}'"
+        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"adesh\",\"address\": \"swindon\"}'"
       - name: Gte users 
         run: curl http://localhost:3001/api/users
