--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run a script
         uses: docker://node:12.14.1-alpine3.10
         with:
-          entrypoint: .github/workflow/script.sh
+          entrypoint: ./.github/workflows/script.sh
           args: "Adesh Tomar"         
   node-docker:
     runs-on: ubuntu-latest
