--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -21,6 +21,7 @@ jobs:
           args: -v 
       - uses: actions/checkout@v1    
       - name: Run a script
+        run: chmod +x ./.github/workflows/script.sh
         uses: docker://node:12.14.1-alpine3.10
         with:
           entrypoint: ./.github/workflows/script.sh
